<resources>
    <string name="app_name">Notes</string>
    <string name="image_done_content_description">Icon to indicate if todo has been marked as done</string>
    <string name="add_edit_todo_title">Title</string>
    <string name="add_edit_todo_description">Notes</string>
    <string name="home_retry_button">Retry</string>
    <string name="home_retry_text">You are in offline mode. Check your wi-fi setting and try again.</string>
    <string name="home_toolbar_title">Notes</string>
    <string name="home_no_notes">You don\'t have any notes. \nAdd some using + button.</string>
    <string name="create_select_color_title">Select Color</string>
    <string name="create_notes_options_take_photo">Take Photo</string>
    <string name="create_notes_options_add_image">Add Image</string>
    <string name="logo_content_description">Notes Logo</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_sign_up_button_text">SignUp</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_date_of_birth_hint">Date of birth</string>
    <string name="sign_up_last_name_hint">Last Name</string>
    <string name="sign_up_first_name_hint">First Name</string>
    <string name="note__palceholder_title">Title</string>
    <string name="note__placeholder_description">Description</string>
</resources>
